--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,7 @@
   "exclude": ["node_modules/*", "__sapper__/*", "public/*"],
   "compilerOptions": {
     "types":[
-      "p5/global",
-      "browser"
+      "p5/global"
     ]
   },
 }
